Minor change to remove solution before the problem
Section 4 began "In collecting and evaluating potential use cases, we have identified fifteen (15) key features supported by the DID specification, which provide benefits in the areas of anti-censorship, anti-exploitation, ease of use, privacy, and sustainability."

This PR changes it to read: "In collecting and evaluating potential use cases, we have identified fifteen (15) key features of DIDs that provide benefits in the areas of anti-censorship, anti-exploitation, ease of use, privacy, and sustainability." 

No change in meaning, just removing the unnecessary reference to the (future) spec

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@ https://example.com/page.html
     <section id="featureBenefitGrid">
 	<h2>Feature/Benefit Grid</h2>
 		<p>In collecting and evaluating potential use cases, we have 
-		identified fifteen (15) key features supported by the DID specification, 
-		which provide benefits in the areas of anti-censorship, anti-exploitation,
+		identified fifteen (15) key features of DIDs 
+		that provide benefits in the areas of anti-censorship, anti-exploitation,
 		ease of use, privacy, and sustainability.<p>
 		<p>The features and their associated benefits can be seen in the following 
         grid. A brief definition of each feature follows.</p>
